# cdn

./: package.json  refresh.sh
.github/workflows/: friend.yml  npm-publish.yml  publish.yml
logi.im/api/: index.py  pyproject.toml  t.py
logi.im/api/asset/data/: bundle.json  friend-handled.json  friend.json  friends-cached.json  friends.json  nodes.info  sentence.json  sentences.json
logi.im/api/biz/: festival.py  friend.py  sentence.py
logi.im/api/festival/: index.py  nodes.info
logi.im/api/links/: data.json  index.py  proxy.js  pyproject.toml
logi.im/api/sentence/: data.json  index.py
logi.im/static/image/random/: r.sh
logi.im/static/themes/Mirages/css/7.10.1/: OwO.custom.min.css  dashboard.settings.min.css  mirages.min.css
logi.im/static/themes/Mirages/usr/: highlight-ext.min.js
logi.im/static/usr/plugins/Mirages/js/: dashboard.write.min.js
logi.im/static/usr/themes/Mirages/css/7.10.1/: dashboard.write.min.css
logi.im/usr/plugins/Mirages/js/: dashboard.write.min.js
logi.im/usr/themes/Mirages/css/7.10.2/: dashboard.write.min.css  mirages.min.css
logi.im/usr/themes/Mirages/css/7.10.2/vditor/theme/: light.css
logi.im/usr/themes/Mirages/js/7.10.1/: OwO.custom.min.js  dashboard.settings.min.js  mirages.main.min.js
logi.im/usr/themes/Mirages/js/7.10.2/: OwO.custom.min.js  dashboard.settings.min.js  mirages.main.min.js
logi.im/usr/themes/Mirages/usr/: highlight-ext.min.js  logi.css
